fixing scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -34,6 +34,14 @@
   overflow-x: scroll;
 }
 
+.container-scroll::-webkit-scrollbar {
+  background: #000 transparent;
+}
+
+.container-scroll {
+  scrollbar-color: #000 transparent;
+}
+
 .contact {
   display: flex;
   justify-content: space-between;
@@ -46,6 +54,10 @@
   align-items: center;
 }
 
+.contact .card .leftBox a {
+  text-decoration: none;
+}
+
 .contact .card .links {
   display: flex;
   list-style: none;
@@ -56,7 +68,7 @@
 .contact .card ul li {
   font-size: 0.7em;
 }
-.contact .card a {
+.contact .card .links a {
   font-size: 0.7em;
 }
 
